[package]
name = "markov_decision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
ndarray = {version="0.15.6", features=["rayon"]}
rayon = "1.7.0"

[[bench]]
name = "my_benchmark"
harness = false
